# clippings_parser

./: .gitignore  Cargo.toml  README.md
src/: arg_parser.rs  file_parser.rs  main.rs
