[package]
name = "clippings_parser"
version = "0.1.0"
edition = "2021"
description = "Kindle 'My Clippings.txt' parser"
authors = ["nemkimo <ttoth.hu@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.1"
thiserror = "1.0"
itertools = "0.10.5"